tests/snapshots/ui_snapshot_tests__language_selector_filtered_by_a_search.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────┌Select Target Language──────────────────────────────────────────────┐──────────────┐"
"│              │Search: finn                                                        │              │"
"│              │────────────────────────────────────────────────────────────────────│              │"
"│              │>   Finnish (fi)                                                    │              │"
"└──────────────│                                                                    │──────────────┘"
"┌Pinyin────────│                                                                    │──────────────┐"
"│Pinyin will ap│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │──────────────┘"
"┌Translation───│                                                                    │──────────────┐"
"│Translation wi│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            ↑↓ Navigate | Enter Select | Type to Search | Esc Close | Ctrl+X Clear search           "
"                                                                                                    "
