tests/snapshots/ui_snapshot_tests__language_selector_popup.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────┌Select Target Language──────────────────────────────────────────────┐──────────────┐"
"│              │Search: (type to filter...)                                         │              │"
"│              │────────────────────────────────────────────────────────────────────│              │"
"│              │>   Afrikaans (af)                                                  │              │"
"└──────────────│    Albanian (sq)                                                   │──────────────┘"
"┌Pinyin────────│    Amharic (am)                                                    │──────────────┐"
"│Pinyin will ap│    Arabic (ar)                                                     │              │"
"│              │    Armenian (hy)                                                   │              │"
"│              │    Assamese (as)                                                   │              │"
"│              │    Aymara (ay)                                                     │              │"
"│              │    Azerbaijani (az)                                                │              │"
"│              │    Bambara (bm)                                                    │              │"
"│              │    Basque (eu)                                                     │              │"
"│              │    Belarusian (be)                                                 │              │"
"└──────────────│    Bengali (bn)                                                    │──────────────┘"
"┌Translation───│    Bhojpuri (bho)                                                  │──────────────┐"
"│Translation wi│    Bosnian (bs)                                                    │              │"
"│              │    Bulgarian (bg)                                                  │              │"
"│              │    Catalan (ca)                                                    │              │"
"│              │    Cebuano (ceb)                                                   │              │"
"│              │    Corsican (co)                                                   │              │"
"│              │                                                                    │              │"
"│              │1 / 131                                                             │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            ↑↓ Navigate | Enter Select | Type to Search | Esc Close | Ctrl+X Clear search           "
"                                                                                                    "
