tests/snapshots/ui_snapshot_tests__language_selector_scrolled_into_the_list.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: German]               │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────┌Select Target Language──────────────────────────────────────────────┐──────────────┐"
"│              │Search: (type to filter...)                                         │              │"
"│              │────────────────────────────────────────────────────────────────────│              │"
"│              │    Frisian (fy)                                                    │              │"
"└──────────────│    Galician (gl)                                                   │──────────────┘"
"┌Pinyin────────│    Georgian (ka)                                                   │──────────────┐"
"│Pinyin will ap│  ✓ German (de) [CURRENT]                                           │              │"
"│              │    Greek (el)                                                      │              │"
"│              │    Guarani (gn)                                                    │              │"
"│              │    Gujarati (gu)                                                   │              │"
"│              │    Haitian Creole (ht)                                             │              │"
"│              │    Hausa (ha)                                                      │              │"
"│              │>   Hawaiian (haw)                                                  │              │"
"│              │    Hebrew (he)                                                     │              │"
"└──────────────│    Hindi (hi)                                                      │──────────────┘"
"┌Translation───│    Hmong (hmn)                                                     │──────────────┐"
"│Translation wi│    Hungarian (hu)                                                  │              │"
"│              │    Icelandic (is)                                                  │              │"
"│              │    Igbo (ig)                                                       │              │"
"│              │    Ilocano (ilo)                                                   │              │"
"│              │    Indonesian (id)                                                 │              │"
"│              │                                                                    │              │"
"│              │41 / 131                                                            │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            ↑↓ Navigate | Enter Select | Type to Search | Esc Close | Ctrl+X Clear search           "
"                                                                                                    "
