tests/snapshots/ui_snapshot_tests__language_selector_with_no_matches.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────┌Select Target Language──────────────────────────────────────────────┐──────────────┐"
"│              │Search: zzzz                                                        │              │"
"│              │────────────────────────────────────────────────────────────────────│              │"
"│              │No languages match your search                                      │              │"
"└──────────────│                                                                    │──────────────┘"
"┌Pinyin────────│                                                                    │──────────────┐"
"│Pinyin will ap│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"└──────────────│                                                                    │──────────────┘"
"┌Translation───│                                                                    │──────────────┐"
"│Translation wi│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"            ↑↓ Navigate | Enter Select | Type to Search | Esc Close | Ctrl+X Clear search           "
"                                                                                                    "
