tests/snapshots/ui_snapshot_tests__renders_in_a_wide_terminal.snap
---
source: tests/ui_snapshot_tests.rs
expression: "render_sized(&app, 160, 20).backend()"
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                             Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]                                            │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│你好                                                                                                                                                          │" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Pinyin will appear above Chinese characters                                                                                                                   │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Translation will appear here...                                                                                                                               │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"│                                                                                                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                      Ctrl+L: Language | Ctrl+A: Select All | Ctrl+X: Clear | Ctrl+S: Settings | Esc: Quit                                      "
"                                                                                                                                                                "
