tests/snapshots/ui_snapshot_tests__screen_in_chinese_ui_language.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                    词汇 - 中文词汇工具  [文本模式]  [中文]  [Target: English]                    │" Hidden by multi-width symbols: [(22, " "), (24, " "), (29, " "), (31, " "), (33, " "), (35, " "), (37, " "), (39, " "), (44, " "), (46, " "), (48, " "), (50, " "), (56, " "), (58, " ")]
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌输入──────────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌拼音──────────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│拼音将显示在汉字上方                                                                              │" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌翻译──────────────────────────────────────────────────────────────────────────────────────────────┐" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│翻译将显示在这里...                                                                               │" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " "), (10, " "), (12, " "), (14, " "), (16, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                Ctrl+L: 语言 | Ctrl+A: 全选 | Ctrl+X: 清空 | Ctrl+S: 设置 | Esc: 退出               " Hidden by multi-width symbols: [(25, " "), (27, " "), (40, " "), (42, " "), (55, " "), (57, " "), (70, " "), (72, " "), (82, " "), (84, " ")]
"                                                                                                    "
