tests/snapshots/ui_snapshot_tests__screen_while_processing.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│你好 [Processing...]                                                                              │" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Pinyin will appear above Chinese characters                                                       │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────┐"
"│Translation will appear here...                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"        Ctrl+L: Language | Ctrl+A: Select All | Ctrl+X: Clear | Ctrl+S: Settings | Esc: Quit        "
"                                                                                                    "
