tests/snapshots/ui_snapshot_tests__screen_with_an_error_message.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│你好                                                                                              │" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Pinyin will appear above Chinese characters                                                       │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────┐"
"│Translation will appear here...                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"Error: Translation service unavailable | Ctrl+L: Language | Ctrl+A: Select All | Ctrl+X: Clear | Ctr"
"                                                                                                    "
