tests/snapshots/ui_snapshot_tests__screen_with_multiline_input.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│你好                                                                                              │" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│世界                                                                                              │" Hidden by multi-width symbols: [(2, " "), (4, " ")]
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│nǐ hǎo                                                                                            │"
"│你 好                                                                                             │" Hidden by multi-width symbols: [(2, " "), (5, " ")]
"│shì jiè                                                                                           │"
"│世  界                                                                                            │" Hidden by multi-width symbols: [(2, " "), (6, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────┐"
"│Translation will appear here...                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"        Ctrl+L: Language | Ctrl+A: Select All | Ctrl+X: Clear | Ctrl+S: Settings | Esc: Quit        "
"                                                                                                    "
