tests/snapshots/ui_snapshot_tests__screen_with_pinyin_and_translation.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│你好世界                                                                                          │" Hidden by multi-width symbols: [(2, " "), (4, " "), (6, " "), (8, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│nǐ hǎo shì jiè                                                                                    │"
"│你 好  世  界                                                                                     │" Hidden by multi-width symbols: [(2, " "), (5, " "), (9, " "), (13, " ")]
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Translation───────────────────────────────────────────────────────────────────────────────────────┐"
"│Hello world                                                                                       │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"        Ctrl+L: Language | Ctrl+A: Select All | Ctrl+X: Clear | Ctrl+S: Settings | Esc: Quit        "
"                                                                                                    "
